[gd_scene load_steps=28 format=2]

[ext_resource path="res://scripts/RigidBodyPlayer.gd" type="Script" id=1]
[ext_resource path="res://scripts/StaticBody.gd" type="Script" id=2]
[ext_resource path="res://scripts/StaticBody3.gd" type="Script" id=3]
[ext_resource path="res://scripts/StaticBody2.gd" type="Script" id=4]
[ext_resource path="res://textur planet stein.jpg" type="Texture" id=5]
[ext_resource path="res://textures/Weltraum darkgeschnitten mit josi.png" type="Texture" id=6]
[ext_resource path="res://3D Modelle/xian_spaceship/scene.gltf" type="PackedScene" id=8]
[ext_resource path="res://textures/rust_coarse_01_4k.gltf/rust_coarse_01.material" type="Material" id=11]
[ext_resource path="res://textures/polystyrene_4k.gltf/polystyrene.material" type="Material" id=12]
[ext_resource path="res://black.png" type="Texture" id=13]
[ext_resource path="res://scripts/CentralBody.gd" type="Script" id=14]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SphereShape" id=2]
radius = 6.05374

[sub_resource type="SphereShape" id=3]
radius = 20.174

[sub_resource type="SphereShape" id=16]
radius = 7.0

[sub_resource type="SphereShape" id=17]
radius = 7.0

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.470588, 0.152941, 0.815686, 1 )
albedo_texture = ExtResource( 5 )

[sub_resource type="SphereShape" id=18]
radius = 7.0

[sub_resource type="CapsuleShape" id=4]

[sub_resource type="CapsuleMesh" id=5]

[sub_resource type="PanoramaSky" id=10]
panorama = ExtResource( 6 )

[sub_resource type="Environment" id=11]
background_mode = 2
background_sky = SubResource( 10 )

[sub_resource type="SphereShape" id=22]
radius = 300.0

[sub_resource type="SphereShape" id=23]
radius = 10.217

[sub_resource type="SphereMesh" id=20]
radius = 9.531
height = 18.114

[sub_resource type="SpatialMaterial" id=21]
albedo_texture = ExtResource( 13 )

[sub_resource type="SphereShape" id=24]
radius = 9.294

[node name="Weltraum" type="Spatial"]

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 69.457, 6.675, -17.472 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 2 )

[node name="Area" type="Area" parent="StaticBody"]
space_override = 3
gravity_point = true
gravity_vec = Vector3( 0, 0, 0 )
gravity = 17.516

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/Area"]
shape = SubResource( 3 )

[node name="PlanetGroundArea" type="Area" parent="StaticBody"]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/PlanetGroundArea"]
shape = SubResource( 16 )

[node name="StaticBody2" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 76.1126, 19.3979, 43.005 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody2"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 11 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody2"]
shape = SubResource( 2 )

[node name="Area" type="Area" parent="StaticBody2"]
space_override = 3
gravity_point = true
gravity_vec = Vector3( 0, 0, 0 )
gravity = 17.516

[node name="CollisionShape" type="CollisionShape" parent="StaticBody2/Area"]
shape = SubResource( 3 )

[node name="PlanetGroundArea" type="Area" parent="StaticBody2"]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody2/PlanetGroundArea"]
shape = SubResource( 17 )

[node name="StaticBody3" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 66.6823, 6.69968, 15.2219 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody3"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody3"]
shape = SubResource( 2 )

[node name="Area" type="Area" parent="StaticBody3"]
space_override = 3
gravity_point = true
gravity_vec = Vector3( 0, 0, 0 )
gravity = 17.516

[node name="CollisionShape" type="CollisionShape" parent="StaticBody3/Area"]
shape = SubResource( 3 )

[node name="PlanetGroundArea" type="Area" parent="StaticBody3"]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody3/PlanetGroundArea"]
shape = SubResource( 18 )

[node name="RigidBodyPlayer" type="RigidBody" parent="."]
transform = Transform( -0.999998, 0, -0.0020594, 0, 1, 0, 0.0020594, 0, -0.999998, 73.801, 33.245, -15.6007 )
collision_layer = 7
collision_mask = 7
mode = 2
contacts_reported = 1
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )

[node name="scene" parent="RigidBodyPlayer" instance=ExtResource( 8 )]
transform = Transform( -8.74228e-09, 0, 0.2, 0, 0.2, 0, -0.2, 0, -8.74228e-09, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="RigidBodyPlayer"]
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="RigidBodyPlayer"]
visible = false
mesh = SubResource( 5 )

[node name="Position3D" type="Position3D" parent="RigidBodyPlayer"]
transform = Transform( 1, 0, 0, 0, 0.986689, 0.16262, 0, -0.16262, 0.986689, 0, 4.85271, 16.6565 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 11 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.790903, 1.17854e-08, 0.611941, -0.270195, 0.897243, 0.349213, -0.54906, -0.441537, 0.709632, 40.422, 21.4677, 40.7588 )

[node name="Camera" type="InterpolatedCamera" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 76.8233, 34.6279, -68.6505 )
fov = 46.6703
target = NodePath("../RigidBodyPlayer/Position3D")
enabled = true

[node name="Central" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 68.9595, 10.9541, -60.5009 )

[node name="CentralBody" type="StaticBody" parent="Central"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.791977, 0, 0 )
collision_layer = 4
collision_mask = 4
script = ExtResource( 14 )

[node name="CentralBodyOuterArea" type="Area" parent="Central/CentralBody"]

[node name="CollisionShape" type="CollisionShape" parent="Central/CentralBody/CentralBodyOuterArea"]
shape = SubResource( 22 )

[node name="CentralBodyArea" type="Area" parent="Central/CentralBody"]

[node name="CollisionShape" type="CollisionShape" parent="Central/CentralBody/CentralBodyArea"]
shape = SubResource( 23 )

[node name="MeshInstance" type="MeshInstance" parent="Central/CentralBody"]
mesh = SubResource( 20 )
material/0 = SubResource( 21 )

[node name="CollisionShape" type="CollisionShape" parent="Central/CentralBody"]
shape = SubResource( 24 )

[connection signal="body_entered" from="StaticBody/Area" to="StaticBody" method="_on_Area_body_entered"]
[connection signal="body_entered" from="StaticBody/Area" to="RigidBodyPlayer" method="_on_Area_body_entered"]
[connection signal="body_exited" from="StaticBody/Area" to="StaticBody" method="_on_Area_body_exited"]
[connection signal="body_exited" from="StaticBody/Area" to="RigidBodyPlayer" method="_on_Area_body_exited"]
[connection signal="body_entered" from="StaticBody/PlanetGroundArea" to="StaticBody" method="_on_PlanetGroundArea_body_entered"]
[connection signal="body_entered" from="StaticBody/PlanetGroundArea" to="RigidBodyPlayer" method="_on_PlanetGroundArea_body_entered"]
[connection signal="body_exited" from="StaticBody/PlanetGroundArea" to="StaticBody" method="_on_PlanetGroundArea_body_exited"]
[connection signal="body_exited" from="StaticBody/PlanetGroundArea" to="RigidBodyPlayer" method="_on_PlanetGroundArea_body_exited"]
[connection signal="body_entered" from="StaticBody2/Area" to="StaticBody2" method="_on_Area_body_entered"]
[connection signal="body_entered" from="StaticBody2/Area" to="RigidBodyPlayer" method="_on_Area_body_entered"]
[connection signal="body_exited" from="StaticBody2/Area" to="StaticBody2" method="_on_Area_body_exited"]
[connection signal="body_exited" from="StaticBody2/Area" to="RigidBodyPlayer" method="_on_Area_body_exited"]
[connection signal="body_entered" from="StaticBody2/PlanetGroundArea" to="StaticBody2" method="_on_PlanetGroundArea_body_entered"]
[connection signal="body_entered" from="StaticBody2/PlanetGroundArea" to="RigidBodyPlayer" method="_on_PlanetGroundArea_body_entered"]
[connection signal="body_exited" from="StaticBody2/PlanetGroundArea" to="StaticBody2" method="_on_PlanetGroundArea_body_exited"]
[connection signal="body_exited" from="StaticBody2/PlanetGroundArea" to="RigidBodyPlayer" method="_on_PlanetGroundArea_body_exited"]
[connection signal="body_entered" from="StaticBody3/Area" to="StaticBody3" method="_on_Area_body_entered"]
[connection signal="body_entered" from="StaticBody3/Area" to="RigidBodyPlayer" method="_on_Area_body_entered"]
[connection signal="body_exited" from="StaticBody3/Area" to="StaticBody3" method="_on_Area_body_exited"]
[connection signal="body_exited" from="StaticBody3/Area" to="RigidBodyPlayer" method="_on_Area_body_exited"]
[connection signal="body_entered" from="StaticBody3/PlanetGroundArea" to="StaticBody3" method="_on_PlanetGroundArea_body_entered"]
[connection signal="body_entered" from="StaticBody3/PlanetGroundArea" to="RigidBodyPlayer" method="_on_PlanetGroundArea_body_entered"]
[connection signal="body_exited" from="StaticBody3/PlanetGroundArea" to="StaticBody3" method="_on_PlanetGroundArea_body_exited"]
[connection signal="body_exited" from="StaticBody3/PlanetGroundArea" to="RigidBodyPlayer" method="_on_PlanetGroundArea_body_exited"]
[connection signal="body_entered" from="Central/CentralBody/CentralBodyArea" to="RigidBodyPlayer" method="_on_CentralBodyArea_body_entered"]
